# steadlang

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.c  main.h
.github/workflows/: cmake.yml  msbuild.yml
steadlang/: lexer.c  lexer.h  tokenizer.c  tokenizer.h
steadlang/krate/: krate.c  krate.h
utils/: filehelpers.c  filehelpers.h  logger.c  logger.h
